WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50328
vcproj changes can't be applied cleanly by the Windows EWS bot
https://bugs.webkit.org/show_bug.cgi?id=50328
Summary
vcproj changes can't be applied cleanly by the Windows EWS bot
Steve Falkenburg
Reported
2010-12-01 09:29:48 PST
vcproj changes can't be applied cleanly by the Windows EWS bot
Attachments
Patch
(5.05 KB, patch)
2010-12-01 09:34 PST
,
Steve Falkenburg
no flags
Details
Formatted Diff
Diff
Patch
(17.17 KB, patch)
2010-12-01 10:34 PST
,
Steve Falkenburg
no flags
Details
Formatted Diff
Diff
Patch
(21.70 KB, patch)
2010-12-01 15:08 PST
,
Steve Falkenburg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Steve Falkenburg
Comment 1
2010-12-01 09:34:33 PST
Created
attachment 75280
[details]
Patch
Steve Falkenburg
Comment 2
2010-12-01 09:35:17 PST
Please ignore the attached patch - it is uploaded to see if the EWS bot can cleanly apply a patch to a vcproj file that has svn:eol-style native set.
Steve Falkenburg
Comment 3
2010-12-01 09:57:36 PST
I've verified setting svn:eol-style native on vcproj files allows Win-EWS to properly apply and build a patch to a vcproj file. So to fix this, we can: 1) set svn:eol-style native on all vcproj/vsprops/sln files in the repository 2) add rules to .gitattributes marking vcproj/vsprops/sln files as -crlf
Steve Falkenburg
Comment 4
2010-12-01 10:31:09 PST
***
Bug 50333
has been marked as a duplicate of this bug. ***
Steve Falkenburg
Comment 5
2010-12-01 10:34:54 PST
Created
attachment 75289
[details]
Patch
Steve Falkenburg
Comment 6
2010-12-01 10:46:25 PST
Latest attached patch should get the Win-EWS bots going with vcproj/vsprops/sln changes.
Adam Roben (:aroben)
Comment 7
2010-12-01 12:47:58 PST
Comment on
attachment 75289
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=75289&action=review
> .gitattributes:21 > +*.vcproj crlf=crlf > +*.vsprops crlf=crlf > +*.sln crlf=crlf > +
I think that should be "eol=crlf", not "crlf=crlf". (My guess is that any other Windows-specific files listed in this file should have svn:eol-style native set on them and then they should be removed from this file.)
Steve Falkenburg
Comment 8
2010-12-01 13:02:33 PST
Landed in
r73060
.
Steve Falkenburg
Comment 9
2010-12-01 15:08:33 PST
Created
attachment 75326
[details]
Patch
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug