JavaScriptCore: 010-12-01  Steve Falkenburg  <sfalken@apple.com>

Reviewed by Adam Roben.

vcproj changes can't be applied cleanly by the Windows EWS bot
https://bugs.webkit.org/show_bug.cgi?id=50328

* JavaScriptCore.vcproj/JavaScriptCore.sln: Modified property svn:eol-style.
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Modified property svn:eol-style.
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreCF.vsprops: Added property svn:eol-style.
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreCFLite.vsprops: Added property svn:eol-style.
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreCommon.vsprops: Added property svn:eol-style.
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreGenerated.vcproj: Modified property svn:eol-style.
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreGeneratedCommon.vsprops: Added property svn:eol-style.
* JavaScriptCore.vcproj/JavaScriptCoreSubmit.sln: Modified property svn:eol-style.
* JavaScriptCore.vcproj/WTF/WTF.vcproj: Modified property svn:eol-style.
* JavaScriptCore.vcproj/WTF/WTFCommon.vsprops: Added property svn:eol-style.
* JavaScriptCore.vcproj/jsc/jsc.vcproj: Modified property svn:eol-style.
* JavaScriptCore.vcproj/jsc/jscCommon.vsprops: Added property svn:eol-style.
* JavaScriptCore.vcproj/testapi/testapi.vcproj: Modified property svn:eol-style.
* JavaScriptCore.vcproj/testapi/testapiCommon.vsprops: Added property svn:eol-style.

LayoutTests: Bug 50298 - /()()()()()()()()()(?:(\10a|b)(X|Y))+/.exec("bXXaYYaY") ASSERTs

Reviewed by Sam Weinig.

* fast/regex/script-tests/pcre-test-1.js:
    Enable regex643, this now works.



Canonical link: https://commits.webkit.org/63512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73065 268f45cc-cd09-0410-ab3c-d52691b4dbfc